# pyprojectify

./: .bumpversion.cfg  .pyup.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  codecov.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  poetry_build_and_test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pyprojectify/: __init__.py  cli.py  pyprojectify.py  utils.py
tests/: __init__.py  test_pyprojectify.py
tests/proj1/: MANIFEST.in  pyproject.toml.bak
tests/proj2/: MANIFEST.in
tests/proj3/: setup.py
