[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyprojectify"
version = "0.1.0"
description = "pyprojectify is a utility allowing python package authors/maintainers/packagers to painlessly migrate their package from setup.py to the new pyproject.toml."
authors = ["Sekou Diao <diao.sekou.nlp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pip = "*"
bump2version = "*"
wheel = "*"
watchdog = "*"
flake8 = "*"
tox = "*"
coverage = "*"
Sphinx = "*"
twine = "*"
Click="^8.0.3"
pytest = "*"
