[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyprojectify"
version = "0.3.1"
description = "pyprojectify is a utility allowing python package authors/maintainers/packagers to painlessly migrate their package from setup.py to the new pyproject.toml."
authors = ["Sekou Diao <diao.sekou.nlp@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
Click = "^8.0.3"

[tool.poetry.dev-dependencies]
pip = "*"
bump2version = "*"
wheel = "*"
watchdog = "*"
flake8 = "*"
tox = "*"
coverage = "*"
Sphinx = "*"
twine = "*"
Click="^8.0.3"
pytest = "*"
bandit = "^1.7.0"
mypy = "^0.812"
pytest-cov = "*"
codecov = "*"

[tool.bandit]
skips = ["B311", ]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
warn_unused_configs = true
strict = true
ignore_missing_imports = true
show_error_codes = true
files = "pyprojectify/"
